--- a/imj-details.html
+++ b/imj-details.html
@@ -48,7 +48,7 @@
           <li><a class="nav-link scrollto" href="index.html#portfolio">Exhibition</a></li>
         
           <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="https://earth.google.com/web/data=MkEKPwo9CiExRnV0MDQ5NU9lRHBlTGV2RDF6a0dWT2NpNXptZHI4TDESFgoUMERBNkM3NTk0ODI3OUIyMTA3MEMgAQ">Street View</a></li>
+          <li><a class="getstarted scrollto" href="https://earth.google.com/earth/d/1Fut0495OeDpeLevD1zkGVOci5zmdr8L1?usp=sharing">Street View</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
