--- a/tei-details.html
+++ b/tei-details.html
@@ -48,7 +48,7 @@
           <li><a class="nav-link scrollto" href="index.html#portfolio">Exhibition</a></li>
    
           <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="https://earth.google.com/web/search/The+White+City+of+Tel+Aviv,+Dizengoff+Street,+Tel+Aviv-Yafo,+Israel/@32.0865024,34.7764784,15.93426005a,1564.69488639d,30.00089514y,0h,0t,0r/data=CigiJgokCfy1YSiwFkBAEbtzPMaN_z9AGfcRPGVJgUFAIe_LHOvOSkFAMikKJwolCiExc2pYUGpmRUoteUFNZ1pEcXRiT041ZllCNDdBODV2MDggAQ">Street View</a></li>
+          <li><a class="getstarted scrollto" href="https://earth.google.com/earth/d/1sjXPjfEJ-yAMgZDqtbON5fYB47A85v08?usp=sharing">Street View</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
