--- a/yad-details.html
+++ b/yad-details.html
@@ -48,7 +48,7 @@
           <li><a class="nav-link scrollto" href="index.html#portfolio">Exhibition</a></li>
           
           <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
-          <li><a class="getstarted scrollto" href="https://earth.google.com/web/search/Yad+Vashem,+Jerusalem,+Israel/@31.77469837,35.17530964,794.34672212a,444.42916978d,35y,76.79274523h,60.00190343t,360r/data=CnUaSxJFCiUweDE1MDMyOWQxYTQ4ODZiM2Y6MHg2NDJhOWZkNWQ1YzcwYWU2GcPFQI0xxj9AIQj3FEpwlkFAKgpZYWQgVmFzaGVtGAEgASImCiQJAi6vcQAfPUARFweKSKdnKcAZtWtTR_cSJsAhp_P-lFEkX8AyKQonCiUKITFGdXQwNDk1T2VEcGVMZXZEMXprR1ZPY2k1em1kcjhMMSAB">Street View</a></li>
+          <li><a class="getstarted scrollto" href="https://earth.google.com/web/search/The+Yad+Vashem+Holocaust+Memorial/@31.7741936,35.1753018,798.08512748a,882.0604255d,35y,0h,0t,0r/data=CigiJgokCS0p_fCKGUBAEbKV2RnL-T9AGdDL5wAdiEFAIRYScU_7Q0FAMikKJwolCiExRnV0MDQ5NU9lRHBlTGV2RDF6a0dWT2NpNXptZHI4TDEgAQ">Street View</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
