--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="container">
       <div class="row gy-4">
         <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
-          <h1>Bettter digital experience to Israel Museum</h1>
+          <h1>Better digital experience to Israel Museum</h1>
           <h2>
             Immerse yourself in Israel's rich cultural heritage from anywhere in the world with our enhanced digital experience at the Israel Museum
           </h2>
